Add token generation
